--- a/online/Impact/blog.html
+++ b/online/Impact/blog.html
@@ -324,7 +324,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
+            <!-- <li><a href="#">Terms of service</a></li> -->
             <li><a href="#">Privacy policy</a></li>
           </ul>
         </div>
@@ -357,7 +357,7 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Impact</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>PTU</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
