--- a/online/Impact/notes-sem.html
+++ b/online/Impact/notes-sem.html
@@ -131,10 +131,14 @@
           You can duplicate this sample page and create any number of inner pages you like! -->
           <!-- <h1>year</h1> -->
           <div class="d-grid gap-2 col-6 mx-auto">
-            <a class="btn btn-primary" href="#" role="button">1st year</a>
-            <a class="btn btn-primary" href="#" role="button">2nd year</a>
-            <a class="btn btn-primary" href="#" role="button">3rd year</a>
-            <a class="btn btn-primary" href="#" role="button">4th year</a>
+            <a class="btn btn-primary" href="#" role="button">1st sem</a>
+            <a class="btn btn-primary" href="#" role="button">2nd sem</a>
+            <a class="btn btn-primary" href="#" role="button">3rd sem</a>
+            <a class="btn btn-primary" href="#" role="button">4th sem</a>
+            <a class="btn btn-primary" href="#" role="button">5th sem</a>
+            <a class="btn btn-primary" href="#" role="button">6th sem</a>
+            <a class="btn btn-primary" href="#" role="button">7th sem</a>
+            <a class="btn btn-primary" href="#" role="button">8th sem</a>
             
           </div>
         <!-- </p> -->
@@ -162,16 +166,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2 col-6 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html/#about">About us</a></li>
-            <li><a href="index.html/#services">Services</a></li>
-            <!-- <li><a href="index.html/">Terms of service</a></li> -->
-            <!-- <li><a href="index.html/">Privacy policy</a></li> -->
-          </ul>
-        </div>
+        
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
