--- a/online/Impact/cat-sem.html
+++ b/online/Impact/cat-sem.html
@@ -171,12 +171,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Previous year question papers</a></li>
-            <li><a href="#">CAT question papers</a></li>
-            <li><a href="#">Interships info.</a></li>
-            <li><a href="#">Palcement info.</a></li>
-            <li><a href="#">Q&A</a></li>
-            <li><a href="">Notes</a></li>
+            <li><a href="pyq-sem.html">Previous year question papers</a></li>
+            <li><a href="cat-sem.html">CAT question papers</a></li>
+            <li><a href="internship.html">Interships info.</a></li>
+            <li><a href="placement.html">Palcement info.</a></li>
+            <li><a href="q&a.html">Q&A</a></li>
+            <li><a href="notes-sem.html">Notes</a></li>
           </ul>
         </div>
 
