--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -361,7 +361,7 @@
           <p>Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem dolore earum</p>
         </div>
 
-        <div class="row gl-3">
+        <div class="d-flex align-items-center justify-content-center" >
 
           <!-- <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
@@ -571,12 +571,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Previous year question papers</a></li>
-            <li><a href="#">CAT question papers</a></li>
-            <li><a href="#">Interships info.</a></li>
-            <li><a href="#">Palcement info.</a></li>
-            <li><a href="#">Q&A</a></li>
-            <li><a href="">Notes</a></li>
+            <li><a href="pyq-sem.html">Previous year question papers</a></li>
+            <li><a href="cat-sem.html">CAT question papers</a></li>
+            <li><a href="internship.html">Interships info.</a></li>
+            <li><a href="placement.html">Palcement info.</a></li>
+            <li><a href="q&a.html">Q&A</a></li>
+            <li><a href="notes-sem.html">Notes</a></li>
           </ul>
         </div>
 
