--- a/online/Impact/internship.html
+++ b/online/Impact/internship.html
@@ -338,11 +338,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="pyq-sem.html">Previous year question papers</a></li>
+            <li><a href="cat-sem.html">CAT question papers</a></li>
+            <li><a href="internship.html">Interships info.</a></li>
+            <li><a href="placement.html">Palcement info.</a></li>
+            <li><a href="q&a.html">Q&A</a></li>
+            <li><a href="notes-sem.html">Notes</a></li>
           </ul>
         </div>
 
