--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>[Template] Sample Inner Page</title>
+  <title>[Template] Q&A</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -107,7 +107,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Sample Inner Page</h2>
+              <h2>Q&A</h2>
               <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
             </div>
           </div>
@@ -117,7 +117,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Sample Inner Page</li>
+            <li>Q&A</li>
           </ol>
         </div>
       </nav>
@@ -284,12 +284,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Previous year question papers</a></li>
-            <li><a href="#">CAT question papers</a></li>
-            <li><a href="#">Interships info.</a></li>
-            <li><a href="#">Palcement info.</a></li>
-            <li><a href="#">Q&A</a></li>
-            <li><a href="">Notes</a></li>
+            <li><a href="pyq-sem.html">Previous year question papers</a></li>
+            <li><a href="cat-sem.html">CAT question papers</a></li>
+            <li><a href="internship.html">Interships info.</a></li>
+            <li><a href="placement.html">Palcement info.</a></li>
+            <li><a href="q&a.html">Q&A</a></li>
+            <li><a href="notes-sem.html">Notes</a></li>
           </ul>
         </div>
 
