--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -43,8 +43,8 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">kamalesh.kumar@pec.edu</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/  8778336814</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -104,7 +104,7 @@
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2>Welcome to <span>connect</span></h2>
+          <h2>Connect with your <span>Seniors</span></h2>
           <!-- <p>Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p> -->
           <div class="d-flex justify-content-center justify-content-lg-start">
             <!-- <a href="#about" class="btn-get-started">Get Started</a> -->
@@ -165,7 +165,7 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis omnis tiledo stran delop</p>
+          <p>We have created this website to promote communication between seniors and juniors.</br> You can ask your doubts and get them clarified from the seniors.</p>
         </div>
 
         <!-- <div class="row gy-4">
@@ -272,7 +272,7 @@
 
         <div class="section-header">
           <h2>Services</h2>
-          <p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis omnis tiledo stran delop</p>
+          <p>Here are the most requested services from seniors by the juniors</p>
         </div>
 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
@@ -283,7 +283,7 @@
                 <i class="bi bi-activity"></i>
               </div>
               <h3>Previous year question papers</h3>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>Get the Previous year question papers of your department </p>
               <a href="pyq-sem.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -294,7 +294,7 @@
                 <i class="bi bi-broadcast"></i>
               </div>
               <h3>CAT question papers</h3>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <p>Get the Previous Year Continuous Assessment Test question papers of your </p>
               <a href="cat-sem.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -305,7 +305,7 @@
                 <i class="bi bi-easel"></i>
               </div>
               <h3>Internships info.</h3>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+              <p></p>
               <a href="internship.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
