--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -297,7 +297,7 @@
               <p>Get the Previous Year Continuous Assessment Test question papers of your </p>
               <a href="cat-sem.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
