--- a/online/Impact/notes-sem.html
+++ b/online/Impact/notes-sem.html
@@ -131,14 +131,14 @@
           You can duplicate this sample page and create any number of inner pages you like! -->
           <!-- <h1>year</h1> -->
           <div class="d-grid gap-2 col-6 mx-auto">
-            <a class="btn btn-primary" href="#" role="button">1st sem</a>
-            <a class="btn btn-primary" href="#" role="button">2nd sem</a>
-            <a class="btn btn-primary" href="#" role="button">3rd sem</a>
-            <a class="btn btn-primary" href="#" role="button">4th sem</a>
-            <a class="btn btn-primary" href="#" role="button">5th sem</a>
-            <a class="btn btn-primary" href="#" role="button">6th sem</a>
-            <a class="btn btn-primary" href="#" role="button">7th sem</a>
-            <a class="btn btn-primary" href="#" role="button">8th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1CQnK6-mlqGNGiTo71wlX-p4WZJQ0JxoC?usp=sharing" role="button" target="_blank">1st sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1br2f0R01MSr3TWvGqz1eg4b6o1N49LxW?usp=sharing" role="button" target="_blank">2nd sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1jf_oksjnSdCFnvoVi_5iP6FUHpevJWVm?usp=sharing" role="button" target="_blank">3rd sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/11f8CJ90GypO-5PVKZ4RFJtRCX0bBYILO?usp=sharing" role="button" target="_blank">4th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1XCU-_uK_g172cvM0t25Hcdq6V0vwAF_Y?usp=sharing" role="button" target="_blank">5th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1iO1ZSf2lhN4rgQmfhL5C8xww437Wzm4D?usp=sharing" role="button" target="_blank">6th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1tF64KQ1x9g1RSW6SVkxjzmL05IbKjAHo?usp=sharing" role="button" target="_blank">7th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1AECGI7F6C7cucptRJECT7fUE9qcK0hME?usp=sharing" role="button" target="_blank">8th sem</a>
             
           </div>
         <!-- </p> -->
