--- a/online/Impact/cat-sem.html
+++ b/online/Impact/cat-sem.html
@@ -131,14 +131,14 @@
           You can duplicate this sample page and create any number of inner pages you like! -->
           <!-- <h1>year</h1> -->
           <div class="d-grid gap-2 col-6 mx-auto">
-            <a class="btn btn-primary" href="#" role="button">1st sem</a>
-            <a class="btn btn-primary" href="#" role="button">2nd sem</a>
-            <a class="btn btn-primary" href="#" role="button">3rd sem</a>
-            <a class="btn btn-primary" href="#" role="button">4th sem</a>
-            <a class="btn btn-primary" href="#" role="button">5th sem</a>
-            <a class="btn btn-primary" href="#" role="button">6th sem</a>
-            <a class="btn btn-primary" href="#" role="button">7th sem</a>
-            <a class="btn btn-primary" href="#" role="button">8th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1dPStXXA2M7cGA-_pLwI00Fo55onZynb7?usp=sharing" role="button" target="_blank">1st sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1VQXYhj9YQFIBS2DJnks8G5ahFQ5FehN2?usp=sharing" role="button">2nd sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1fG9Z07bSPJOeAkVhLFjXZclvm4MXNhc5?usp=sharing" role="button" target="_blank">3rd sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1o7D68fa9DLeBhQbcXCbb-Bk6QC8pkh7X?usp=sharing" role="button" target="_blank">4th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1cY5Bh1f6sO2-xSTRmYlovaJeXASP2_I7?usp=sharing" role="button" target="_blank">5th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1Oa7Z4EzweWXDdqnZg_CRS35cKwrvJhmL?usp=sharing" role="button" target="_blank">6th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1AnILpf0-tu2xvfAbl58cMx72lo2FS6Hh?usp=sharing" role="button" target="_blank">7th sem</a>
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1suqRNQ0zbn_cueoN_uZmI44U4e09LBAq?usp=sharing" role="button" target="_blank">8th sem</a>
             
           </div>
         <!-- </p> -->
