--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -270,16 +270,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2 col-6 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html/#about">About us</a></li>
-            <li><a href="index.html/#services">Services</a></li>
-            <!-- <li><a href="index.html/">Terms of service</a></li> -->
-            <!-- <li><a href="index.html/">Privacy policy</a></li> -->
-          </ul>
-        </div>
+        
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
@@ -308,7 +299,7 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>PTU</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Impact</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
