--- a/online/Impact/pyq-sem.html
+++ b/online/Impact/pyq-sem.html
@@ -117,7 +117,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Sample Inner Page</li>
+            <li>Previous year questions</li>
           </ol>
         </div>
       </nav>
