--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -294,7 +294,7 @@
                 <i class="bi bi-broadcast"></i>
               </div>
               <h3>CAT question papers</h3>
-              <p>Get the Previous Year Continuous Assessment Test question papers of your </p>
+              <p>Get the Previous Year Continuous Assessment Test question papers </p>
               <a href="cat-sem.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
@@ -305,7 +305,7 @@
                 <i class="bi bi-easel"></i>
               </div>
               <h3>Internships info.</h3>
-              <p></p>
+              <p>Get to know where your seniors have undergone their internships.</p>
               <a href="internship.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -315,8 +315,8 @@
               <div class="icon">
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <h3>Palcement info.</h3>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+              <h3>Placement info.</h3>
+              <p>Get to know the Placement details of your seniors.</p>
               <a href="placement.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -327,7 +327,7 @@
                 <i class="bi bi-calendar4-week"></i>
               </div>
               <h3>Q&A</h3>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+              <p>Ask your questions and get the anwers from the seniors.</p>
               <a href="q&a.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -338,7 +338,7 @@
                 <i class="bi bi-chat-square-text"></i>
               </div>
               <h3>Notes</h3>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+              <p>Get your senior's notes for your department subjects.  </p>
               <a href="notes-sem.html" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -358,7 +358,7 @@
 
         <div class="section-header">
           <h2>Our Team</h2>
-          <p>Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem dolore earum</p>
+          <p>We are a team of two members who collabrated to develop this website.</p>
         </div>
 
         <div class="d-flex align-items-center justify-content-center" >
@@ -380,10 +380,10 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-              <h4>Sarah Jhinson</h4>
-              <span>Marketing</span>
+              <h4>Kamalesh Kumar K</h4>
+              <span>ECE PEC 2024</span>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
@@ -393,14 +393,14 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-              <h4>William Anderson</h4>
-              <span>Content</span>
+              <img src="assets/img/WhatsApp Image 2022-08-07 at 1.49.36 PM.jpeg" class="img-fluid" alt="">
+              <h4>Keerthivasan R</h4>
+              <span>ECE PEC 2024</span>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/keerthivasan-r-355b36267/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -453,7 +453,7 @@
                 </h3>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                    According to our Curriculum, it is necessary to undergo Internship for a period of atleast 6 weeks.At the middle of 8th Semester, we have to submit our Internship report. So it is advicable to completer your internships before 7th Sem.The details of where to do the internship is avaible at the Internships info section.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -462,12 +462,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
                     <span class="num">2.</span>
-                    What are all the companies came for campus drive in the past years.
+                    What are all the companies came for campus drive in past years?
                   </button>
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Refer the Placement Info section to get the details on the companies that visited our college for campus drive in past years.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -476,12 +476,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                     <span class="num">3.</span>
-                    How important is our project for Palcement.
+                    How important is our project for placements?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    In the HR round of the interview, the questions that will be asked to us is based on our resume. If you add your projects in the resume, it can greatly help in the HR round.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -490,12 +490,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
                     <span class="num">4.</span>
-                    How important is our CPGA.
+                    How important is our CGPA for placements?
                   </button>
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Eventhough CGPA is important, most of the companies coming for the placements put forth the requirement of CGPA greater than 8. If your CGPA is greater than 8, then you are good to go for the placements.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -504,12 +504,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-5">
                     <span class="num">5.</span>
-                    All about taking Honors and Minors (H/M).
+                    Should I take Honors and Minors (H/M)?
                   </button>
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                    It comes down to your personal preference. It can also help during placements. For example if you are a student of Chemical or Mechanical Engineering, you can attend IT companies if you have minors in CSE.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -529,7 +529,7 @@
 
         <div class="section-header">
           <h2>Contact</h2>
-          <p>Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem dolore earum</p>
+          <p>You can contact us on email or Mobile number.</p>
         </div>
 
         
@@ -584,7 +584,7 @@
           <h4>Contact Us</h4>
           <p>
            
-            <strong>Phone:</strong> xxxxxxxxxx/9150431574<br>
+            <strong>Phone:</strong> +91 8778336814/9150431574<br>
             <strong>Email:</strong> kamalesh.kumar@pec.edu<br>
           </p>
 
