--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -574,7 +574,7 @@
             <li><a href="pyq-sem.html">Previous year question papers</a></li>
             <li><a href="cat-sem.html">CAT question papers</a></li>
             <li><a href="internship.html">Interships info.</a></li>
-            <li><a href="placement.html">Palcement info.</a></li>
+            <li><a href="placement.html">Placement info.</a></li>
             <li><a href="q&a.html">Q&A</a></li>
             <li><a href="notes-sem.html">Notes</a></li>
           </ul>
