--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -108,7 +108,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
               <h2>Q&A</h2>
-              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p>Ask your questions and get the anwers from the seniors.</p>
             </div>
           </div>
         </div>
@@ -288,7 +288,7 @@
           <h4>Contact Us</h4>
           <p>
            
-            <strong>Phone:</strong> xxxxxxxxxx/9150431574<br>
+            <strong>Phone:</strong> +91 8778336814/9150431574<br>
             <strong>Email:</strong> kamalesh.kumar@pec.edu<br>
           </p>
 
