--- a/online/Impact/pyq-sem.html
+++ b/online/Impact/pyq-sem.html
@@ -108,7 +108,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
               <h2>Sample Inner Page</h2>
-              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p>Get the Previous year question papers of your department </p>
             </div>
           </div>
         </div>
@@ -184,7 +184,7 @@
           <h4>Contact Us</h4>
           <p>
            
-            <strong>Phone:</strong> xxxxxxxxxx/9150431574<br>
+            <strong>Phone:</strong> +91 8778336814/9150431574<br>
             <strong>Email:</strong> kamalesh.kumar@pec.edu<br>
           </p>
 
