--- a/online/Impact/pyq-sem.html
+++ b/online/Impact/pyq-sem.html
@@ -107,13 +107,8 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-<<<<<<< HEAD
-              <h2>Sample Inner Page</h2>
+              <h2>Previous Year Questions</h2>
               <p>Get the Previous year question papers of your department </p>
-=======
-              <h2>Previous year questions</h2>
-              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
->>>>>>> 8637e5eac642c5b84b34a80f1f15d2bb7ce0ae08
             </div>
           </div>
         </div>
