--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -529,7 +529,7 @@
 
         <div class="section-header">
           <h2>Contact</h2>
-          <p>You can contact us on email or Mobile number.</p>
+          <p>You can contact us on email or WhatsApp.</p>
         </div>
 
         
