--- a/online/Impact/placement.html
+++ b/online/Impact/placement.html
@@ -129,9 +129,9 @@
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up">
 
-        <div class="row g-5">
+        <div class="d-flex align-items-center justify-content-center">
 
-          <div class="col-lg-8">
+          <div class="col-lg-9">
 
             <article class="blog-details">
 
