--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -385,7 +385,7 @@
               <div class="social">
                 <a href="https://twitter.com/kambuuusss"><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
+                <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
                 <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
