--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -129,7 +129,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              what to do if our attendance percentage(%) is low?
             </div>
           </div>
         </p>
@@ -139,7 +139,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+               what to do if our CAT marks are very low ?
             </div>
           </div>
         </p>
@@ -149,7 +149,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              which is the right time to prepare for placemnet?
             </div>
           </div>
         </p>
@@ -159,7 +159,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              what are all the website to prepare for placement?
             </div>
           </div>
         </p>
@@ -169,7 +169,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              what are the mandotory thing our portfolio should contain ?
             </div>
           </div>
         </p>
@@ -179,7 +179,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              How to use library effectively?/features of our librarry ?
             </div>
           </div>
         </p>
@@ -189,7 +189,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              What is atal incubation center, how to use atal incubation cener effectively ?
             </div>
           </div>
         </p>
@@ -199,7 +199,7 @@
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              Can I start my own club if one not present eg. robotic,cad ?
             </div>
           </div>
         </p>
