--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -125,7 +125,44 @@
 
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
+        <form name="contact" method="POST" data-netlify="true" 
+    data-netlify-honeypot="bot-field" action="javascript:void(0);"
+    onSubmit="submit">
+    
+        <input class="d-none" name="bot-field" />
+        <div class="form-row">
+            <div class="form-group col-md-12 mt-3">
+                <label for="name">Ask your Questions</label>
+                <input type="text" class="form-control" id="name" name="name">
+              </div>
+          <!-- <div class="form-group col-md-6 mt-3">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" id="inputEmail" name="email">
+          </div> -->
+        </div>
+        <button type="submit" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Send</button>
+        <!-- Button trigger modal -->
 
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Thanks</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        we'll try to answer your question as soon as possible.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onClick="window.location.reload();">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Understood</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+      </form>
         <p>
           <div class="card">
             <div class="card-body">
