--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -109,6 +109,7 @@
             <div class="col-lg-6 text-center">
               <h2>Q&A</h2>
               <p>Ask your questions and get the anwers from the seniors.</p>
+              <p>Tip: Use "crtl + f" to search into Questons</p>
             </div>
           </div>
         </div>
@@ -135,10 +136,10 @@
                 <label for="name">Ask your Questions</label>
                 <input type="text" class="form-control" id="name" name="name">
               </div>
-          <!-- <div class="form-group col-md-6 mt-3">
-            <label for="inputEmail">Email</label>
+          <div class="form-group col-md-12 mt-3">
+            <label for="inputEmail">Email (helps to notify you, but not mandotory)</label>
             <input type="email" class="form-control" id="inputEmail" name="email">
-          </div> -->
+          </div>
         </div>
         <button type="submit" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Send</button>
         <!-- Button trigger modal -->
@@ -161,6 +162,9 @@
       </div>
     </div>
   </div>
+</div>
+<div class="col-lg-12 text-center">
+  <h2>Q&A</h2>
 </div>
       </form>
         <p>
