--- a/online/Impact/placement.html
+++ b/online/Impact/placement.html
@@ -248,9 +248,12 @@ display a positive attitude and self-assurance.
                 <blockquote>
                   <h2>Important Note</h2>
                   <ul>
-                    <li>If you placed in a company with pakage less than 10LPA then ur are not allowed to attend further companies under 10LPA but you can attend above 10LPA so choose wisely</li>
-                    <li>Even if you are master in your domain ,first round will be appttitude so pay attention to that and prepare it well. If fail in apptitude go Home!</li>
-                    <li>You opted for a company but not attended the interview then you will we not be allowed to attend the next consecutive 5 companies which are comming for campus drive</li>
+                    <li>You can apply to all the companies until you get selected in one.
+                      Packages are classified into two sections, one below 10 lpa package and the other above 10 lpa.
+                      The criteria is that if you are selected in a comapny with a package below 10 lpa, you can't apply in that section of offers. But you are allowed to apply and appear in all the above 10 lpa package offers.
+                      Many companies will have their interview drives on parallel with others so you can appear in as many as you can. If you get selected in multiple companies at same time, you are given a choice to pick one and reject others.</li>
+                    <li>Even if you are master in your domain ,first round will be appttitude so pay attention to that and prepare it well. If you fail in apptitude go Home!</li>
+                    <li>You opted for a company but not attended the interview then you will not be allowed to attend the next consecutive 5 companies which are comming for campus drive</li>
                   </ul>
                 </blockquote>
 
