--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -379,7 +379,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="" height="600" width="600">
               <h4>Kamalesh Kumar K</h4>
               <span>ECE PEC 2024</span>
               <div class="social">
@@ -393,7 +393,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/WhatsApp Image 2022-08-07 at 1.49.36 PM.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="" height="600" width="600">
               <h4>Keerthivasan R</h4>
               <span>ECE PEC 2024</span>
               <div class="social">
