--- a/online/Impact/internship.html
+++ b/online/Impact/internship.html
@@ -44,13 +44,13 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">kamalesh.kumar@pec.edu</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/ 8778336814</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/rkeerthivasan1/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/_.k.e.e.r.t.h.i_._/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
