--- a/online/Impact/q&a.html
+++ b/online/Impact/q&a.html
@@ -43,13 +43,13 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">kamalesh.kumar@pec.edu</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/ 8778336814</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/rkeerthivasan1/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/_.k.e.e.r.t.h.i_._/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
@@ -108,7 +108,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
               <h2>Q&A</h2>
-              <p>Ask your questions and get the anwers from the seniors.</p>
+              <p>Ask your questions and get the answers from the seniors.</p>
               <p>Tip: Use "crtl + f" to search into Questons</p>
             </div>
           </div>
@@ -170,32 +170,34 @@
         <p>
           <div class="card">
             <div class="card-body">
-              what to do if our attendance percentage(%) is low?
+              What to do if our attendance percentage(%) is low?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+              If your attendance percentage is above 75 percent, you are eligible to appear for semester Examinations.
+          If you have attedance percentage above 60 percent, you have to pay fine to appear for examinations.
+          If neither of the above, you have to provide proper reasons such as medical certificate.
         </p>
         <p>
           <div class="card">
-            <div class="card-body">
+            <div class="card-body " >
                what to do if our CAT marks are very low ?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          You can ask the faculty to conduct additional test to improve the student's performance. You should also focus more on assignments to improve your internals.
         </p>
         <p>
           <div class="card">
             <div class="card-body">
-              which is the right time to prepare for placemnet?
+              Which is the right time to prepare for placement?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          You enter the department at the start of Second year. It is also a right times to start your placements prepartion  
         </p>
         <p>
           <div class="card">
@@ -205,88 +207,66 @@
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          Refer Competetive programming websites such as Leetcode, HackerRank etc. for coding preparations. For Aptitude Preparation
+          refer indiabix.
         </p>
         <p>
           <div class="card">
             <div class="card-body">
-              what are the mandotory thing our portfolio should contain ?
+              What about the NPTEL Courses ?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          You should complete 2 NPTEL courses spanning a total of 4 credits. The courses you take should not be part of your 
+          curriculum. And it is also mandatory to do atleast one HSM course either through NPTEL Or OEC.
         </p>
         <p>
           <div class="card">
             <div class="card-body">
-              How to use library effectively?/features of our librarry ?
+            What are OEC courses?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          Open Elective Courses(OEC) are courses offered by other departments. You can apply for OEC courses starting from 5th Semester
+          It is mandatory to complete 2 OEC courses. You can also take HSM courses in OEC.
         </p>
         <p>
           <div class="card">
             <div class="card-body">
-              What is atal incubation center, how to use atal incubation cener effectively ?
+              What is atal incubation center, How to use it effectively ?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          AIM is a flagship initiative to promote the culture of innovation and entrepreneurship in India. It is an umbrella structure that has been mandated to promote innovation and revolutionize the entrepreneurial ecosystem in the country.
+          If you have any good entrepreneurial ideas, you can approach Atal incubation centre and get funding for it.
         </p>
         <p>
           <div class="card">
             <div class="card-body">
-              Can I start my own club if one not present eg. robotic,cad ?
+              How to use library effectively?/features of our library ?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          Our College library is equipped with a large number of books and online materials. Communicate with the library faculties to make
+          best use of the library.
         </p>
         <p>
           <div class="card">
             <div class="card-body">
-              This is some text within a card body.
+              What will happen in the 8th Semester?
             </div>
           </div>
         </p>
         <p>
-          alskdfjlsdfls
+          At the 8th Semester, you will only have project works. If you have got placed in any company, you would have started attending 
+          their training program.
         </p>
         <p>
-          <div class="card">
-            <div class="card-body">
-              This is some text within a card body.
-            </div>
-          </div>
-        </p>
-        <p>
-          alskdfjlsdfls
-        </p>
-        <p>
-          <div class="card">
-            <div class="card-body">
-              This is some text within a card body.
-            </div>
-          </div>
-        </p>
-        <p>
-          alskdfjlsdfls
-        </p>
-        <p>
-          <div class="card">
-            <div class="card-body">
-              This is some text within a card body.
-            </div>
-          </div>
-        </p>
-        <p>
-          alskdfjlsdfls
-        </p>
+
 
       </div>
     </section>
