--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/ptu.png" rel="icon">
+  <link href="assets/img/ptu.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,7 +44,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">kamalesh.kumar@pec.edu</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/  8778336814</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/ 8778336814</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -384,7 +384,7 @@
               <span>ECE PEC 2024</span>
               <div class="social">
                 <a href="https://twitter.com/kambuuusss"><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href="https://www.facebook.com/rkeerthivasan1/"><i class="bi bi-facebook"></i></a>
                 <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
                 <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
@@ -398,8 +398,8 @@
               <span>ECE PEC 2024</span>
               <div class="social">
                 <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/rkeerthivasan1/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/_.k.e.e.r.t.h.i_._/"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/keerthivasan-r-355b36267/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
