--- a/q&a.html
+++ b/q&a.html
@@ -127,7 +127,7 @@
       <div class="container" data-aos="fade-up">
         <form name="contact" method="POST" data-netlify="true" 
     data-netlify-honeypot="bot-field" action="javascript:void(0);"
-    onSubmit="submit">
+    onSubmit="submit" netlify>
     
         <input class="d-none" name="bot-field" />
         <div class="form-row">
