--- a/q&a.html
+++ b/q&a.html
@@ -130,11 +130,11 @@
     onSubmit="submit">
         <input class="d-none" name="bot-field" />
         <div class="form-row">
-            <div class="form-group col-md-6 mt-3">
-                <label for="name">Your Questons</label>
+            <div class="form-group col-md-12 mt-3">
+                <label for="name">Your Question</label>
                 <input type="text" class="form-control" id="name" name="name">
               </div>
-          <div class="form-group col-md-6 mt-3">
+          <div class="form-group col-md-12 mt-3">
             <label for="inputEmail">Email</label>
             <input type="email" class="form-control" id="inputEmail" name="email">
           </div>
